--- a/style.css
+++ b/style.css
@@ -66,8 +66,75 @@ p{
     border: none;
     cursor: pointer;
     border-radius: 30px;
+ }
+.btn:hover{
+    background: rgb(44, 37, 37);
 }
 
  .header .row{ 
     margin-top: 0px;
+}
+.categories{
+    margin: 70px 0;
+}
+.col-3{
+    /* flex-basis: 30%; */
+    min-width: 250px;
+    margin-bottom: 30px;
+}
+.col-3 img{
+    width: 100%;
+    height: 200px;
+    width: 250px;
+}
+.small-container{
+    /* max-width: 1080px; */
+    margin: auto;
+    padding-right: 25px;
+    padding-left: 25px;
+}
+.col-4{
+    flex-basis: 25%;
+    padding: 10px;
+    min-width: 200px;
+    margin-bottom: 50px;
+    transition: transform 0.5s;
+}
+.col-4 img{
+    width: 100%;
+    height: 9cm;
+    /* width: 8cm; */
+}
+.checked {
+    color: orange;
+  }
+
+.title{
+    text-align: center;
+    margin: 0 auto 80px;
+    position: relative;
+    line-height: 60px;
+    color: #555;
+}
+.title::after{
+    content: '';
+    background: #3b4fff;
+    width: 80px;
+    height: 5px;
+    border-radius: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+h4{
+    color: #555;
+    font-weight: normal;
+}
+
+.col-4 p{
+    font-size: 14px;
+}
+.col-4:hover{
+    transform: translateY(-5px);
 }
