--- a/style.css
+++ b/style.css
@@ -138,3 +138,117 @@ h4{
 .col-4:hover{
     transform: translateY(-5px);
 }
+
+.offer{
+    /* background: radial-gradient(#fff,#bdc4da); */
+    margin-top: 80px;
+    padding: 30px 0;
+}
+
+.offer-img{
+    height: 500px;
+    width: 100px;
+}
+
+.col-5{
+    /* background: radial-gradient(#fff,#96a9e9); */
+    /* flex-basis: 50%; */
+    /* min-width: 300px; */
+    width: 500px;
+    
+    
+}
+
+.col-5 .offer-img{
+    padding: 50px;
+    width: 100%;
+    /* height: 12cm; */
+    /* width: 8cm; */
+    margin-left: 200px;
+}
+small{
+    color: #555;
+}
+
+.btn1 {
+    transform: translate(-50%, -50%);
+    /* -ms-transform: translate(-50%, -50%); */
+    background-color: #555;
+    color: white;
+    border-radius: 30px;
+    font-size: 16px;
+    border: none;
+    padding: 12px 24px;
+    cursor: pointer;
+    
+ }
+.btn1:hover{
+    background: rgb(44, 37, 37);
+}
+
+.testimonial{
+    padding-top: 100px;
+}
+.row1{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* margin: 150px; */
+}
+.col-6{
+    flex-basis: 25%;
+    text-align: center;
+    width: 300px;
+    padding: 40px 20px;
+    cursor: pointer;
+    transition: transform 0.5s;
+    box-shadow: 0 0 20px 0px rgba(0,0,0,0.1);
+}
+.col-6:hover{
+    transform: translateY(-10px);
+}
+
+.col-6 img{
+    /* width: 100%; */
+    /* height: 200px; */
+    width: 50px;
+    margin-top: 20px;
+    border-radius: 50%;
+}
+
+.fa.fa-quote-left{
+    font-size: 34px;
+    color: rgb(65, 65, 231);
+}
+
+.col-6 p{
+    font-size: 12px;
+    margin-top: 12px 0;
+    color: #777;
+}
+
+.col-6 h3{
+    font-weight: 600;
+    color: #555;
+    font-size: 16px;
+}
+
+.brands{
+    margin: 150px auto;
+}
+
+.col-7{
+    width: 160px;
+}
+
+.col-7 img{
+    width: 10vw;
+    height: 5vw;
+    cursor: pointer;
+    filter: grayscale(100%);
+}
+
+.col-7 img:hover{
+    filter: grayscale(0%);
+}
